--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 .card{
     background-color: hsl(0, 0%, 100%);
-    width: 260px;
+    width: 258px;
     height: 430px;
     display: flex;
     flex-direction: column;
@@ -47,9 +47,10 @@
     align-items: center;
     justify-content: center;
     font-size: 8px;
-    width: 90%;
+    width: 100%;
     text-align: center;  
     color: hsl(218, 44%, 22%); 
+    padding: 0 6px;
 }
 
 .paragraph{
@@ -57,9 +58,26 @@
     align-items: center;
     justify-content: center;
     font-size: 14px;
-    width: 95%;
+    width: 100%;
     text-align: center; 
     color: hsl(220, 15%, 55%); 
+}
+.attribution{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Outfit";
+    font-size: 11px;
+    text-align: center;
+    background-color: hsl(0, 0%, 100%);
+}
 
+.attribution a {
+    color: hsl(228, 45%, 44%); 
 }
 
